package Nymble;

message Ticket {
  required bytes nymble = 1;
  required bytes ctxt = 2;
  required bytes mac_n  = 3;
  required bytes mac_ns = 4;
}